--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 
     <!-- Contact Info -->
     <div class="contact-info" style="margin-top: 40px; color: #333;">
-      <p><strong>Email:</strong> <a href="mailto:info@edororjudyempowermentfoundatio...">info@edororjudyempowermentfoundatio...</a></p>
+      <p><strong>Email:</strong> <a href="mailto:info@edororjudyempowermentfoundation.org">info@edororjudyempowermentfoundation.org</a></p>
       <p><strong>Phone:</strong> <a href="tel:+2347049691346">+2347049691346</a></p>
    
     </div>
